lab1/Test/L1-A-13-28.output
Error Type B at Line 10
Error Type A at Line 18
Error Type B at Line 22
Error Type B at Line 25
Error Type B at Line 26
Error Type B at Line 31
Error Type B at Line 34
Error Type A at Line 41
Error Type A at Line 47
Error Type A at Line 51
